Add the CUDA Tile demos: 19 matmul, 20 hybrid graph, 21 flash attention
Three Track A demos for TornadoVM's TileContext API, which compiles a task
through NVIDIA CUDA Tile instead of the SIMT path.

19-cutile-matmul: the same FP16 GEMM as a naive kernel, a hand-tiled
KernelContext kernel, and a TileContext kernel whose whole body is
tc.mma(a, b, acc). Wall clock at n=256: 0.446 / 0.321 / 0.221 ms. The
hand-written .cu measures the same three kernels with CUDA events and shows
the hand-tiled rung is actually slower than naive there, so both sets of
numbers are quoted together.

20-cutile-hybrid: one TaskGraph with a KernelContext JIT task, a CUDA Tile
GEMM, a cuBLAS sgemv library task and a @Parallel task on shared device
buffers. withCUDAGraph() captures all four: 0.396 -> 0.073 ms (5.44x). The
CUDA equivalent captures the identical stages and gets 1.14x at the kernel
level, which is what shows the Java figure is host dispatch.

21-cutile-flash-attention: flash attention with online softmax, ported from
NVIDIA TileGym's attention.cuh, against a materialised three-kernel path
that is also GPU-resident so the comparison is fair: 1.49x, and 1.18x at
the kernel level in CUDA. 128x HMMA.16816.F32 in the cubin with zero
asm volatile in the generated source. Causal masking is absent and the
README says why: it needs ct::select, declared but not lowered.

These need a source build of the cuTile branch, CUDA 13.3+ and driver R580+,
so they are pinned separately in env/versions.env and kept out of
run-all-demos.sh; scripts/run-cutile-demos.sh runs them both ways and
reports 9 passed, 0 failed. Evidence in results/raw/33-cutile-demos/.

Also filed results/failures/09-kernelcontext-halffloat-write.md: an in-place
new HalfFloat(...) write from a KernelContext kernel leaves the buffer
zeroed, silently. 25-line reproducer, no tile code involved; it cost demo 20
its first correct run.